working transfer implementation
